# Genshin-Impact-Daily-Check-in

./: Cargo.toml  README.md
src/: checkin.rs  main.rs
